# FamilyOps_AI

./: .dockerignore  .gitignore  .replit  DEPLOYMENT.md  Dockerfile  Makefile  README.md  cleanup_repo.ipynb  cleanup_repo.py  cleanup_runner.ipynb  docker-compose.yml  next.config.js  package-lock.json  package.json  pyproject.toml  replit.md  sql query  start.sh  tsconfig.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  evaluation.yml
backend/: .dockerignore  .env.example  .run_ingest_tests.sh  Dockerfile  IMPLEMENTATION_SUMMARY.md  INGESTION.md  LANGGRAPH_ARCHITECTURE_REPORT.md  MEAL_PLANNING_ASSESSMENT.md  MIGRATION_AND_TESTING_GUIDE.md  main.py  requirements.txt  run.py
backend/docs/: orchestrator_graph.json  orchestrator_graph.md  orchestrator_graph_ascii.txt
backend/tests/: test_activity_search.py  test_auth.py  test_config.py  test_dashboard_email_filter.py  test_database_config.py  test_email_graph.py  test_email_ingestor.py  test_ingest.py  test_meal_planner_service.py  test_meals_routes.py  test_memory.py  test_ownership.py  test_privacy.py  test_prompt_versioning.py  test_rag_retrieval.py  test_resilience.py  test_weather_event_recipe.py  test_web_search.py
evaluation/: __init__.py  deepeval_eval.py  pipeline.py  ragas_eval.py  results.json  version-manifest.json  versioning.py
evaluation/dataset/: __init__.py  evaluation_dataset.json
evaluation/metrics/: __init__.py  schemas.py  scoring.py  text_utils.py
evaluation/runners/: __init__.py  system_adapter.py
evaluation/tests/: test_operational_metrics.py  test_system_adapter.py  test_versioning.py
frontend/: package-lock.json  package.json
scripts/: docker-up.sh  local-up.sh
src/app/: globals.css  layout.tsx  page.tsx
src/lib/: api.ts
(+112 files in other folders)
