[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.50",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.48.0",
]
