[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.3",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "deepeval>=0.21.0",
    "ragas>=0.1.10",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.50",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.48.0",
    "pdfminer.six>=20221105",
    "python-docx>=0.8.11",
    "pytesseract>=0.3.10",
    "Pillow>=9.0.0",
    "aiofiles>=23.1.0",
    "qdrant-client>=1.9.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["evaluation*"]
